force-app/main/default/objects/Eval_Request__c/Eval_Request__c.object-meta.xml
<CustomObject>
    <description>Product Request Information</description>
    <label>Eval Request</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Eval Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>