force-app/main/default/objects/Eval_Request__c/fields/All_Items_Returned__c.field-meta.xml
<CustomField>
    <fullName>All_Items_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Items Returned?</label>
    <type>Checkbox</type>
</CustomField>