force-app/main/default/objects/Eval_Request__c/fields/Assigned_Rep__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Request_Assigned_User</relationshipName>
    <type>Lookup</type>
</CustomField>