force-app/main/default/objects/Eval_Request__c/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <label>Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>