force-app/main/default/objects/Eval_Request__c/fields/Awaiting_Shipping_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Shipping_TimeStamp__c</fullName>
    <description>Eval Status Change Time Stamp to Awaiting Shipping</description>
    <label>Awaiting Shipping TimeStamp</label>
    <type>DateTime</type>
</CustomField>