force-app/main/default/objects/Eval_Request__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Product_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>