force-app/main/default/objects/Eval_Request__c/fields/BILLING_ACCOUNT_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>BILLING_ACCOUNT_EMAIL__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;, 
Owner:User.Email,   Billing_Contact_Name__r.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BILLING_ACCOUNT_EMAIL</label>
    <type>Text</type>
</CustomField>