force-app/main/default/objects/Eval_Request__c/fields/BILLING_ACCOUNT_LNAME__c.field-meta.xml
<CustomField>
    <fullName>BILLING_ACCOUNT_LNAME__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;, 
Owner:User.LastName,   Billing_Contact_Name__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BILLING_ACCOUNT_LNAME</label>
    <type>Text</type>
</CustomField>