force-app/main/default/objects/Eval_Request__c/fields/BILLING_ACCOUNT_NAME__c.field-meta.xml
<CustomField>
    <fullName>BILLING_ACCOUNT_NAME__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;,&apos;ViewSonic Corporation&apos; ,  Billing_Contact_Name__r.Account.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BILLING_ACCOUNT_NAME</label>
    <type>Text</type>
</CustomField>