force-app/main/default/objects/Eval_Request__c/fields/Billing_Address_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Invoice__c</fullName>
    <label>Billing Address (Invoice)</label>
    <type>TextArea</type>
</CustomField>