force-app/main/default/objects/Eval_Request__c/fields/BILLING_CITY__c.field-meta.xml
<CustomField>
    <fullName>BILLING_CITY__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;, 
Owner:User.City,   
if(not(isblank(Billing_Contact_Name__r.Account.BillingCity)), Billing_Contact_Name__r.Account.BillingCity, Oracle_Ship_City__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BILLING_CITY</label>
    <type>Text</type>
</CustomField>