force-app/main/default/objects/Eval_Request__c/fields/Billing_Contact_Email_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email_Invoice__c</fullName>
    <label>Billing Contact Email (Invoice)</label>
    <type>Email</type>
</CustomField>