force-app/main/default/objects/Eval_Request__c/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Eval_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>