force-app/main/default/objects/Eval_Request__c/fields/BILLING_CONTACT_PERSON__c.field-meta.xml
<CustomField>
    <fullName>BILLING_CONTACT_PERSON__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;, 
Owner:User.FirstName+&apos; &apos;+Owner:User.LastName,   Billing_Contact_Name__r.FirstName+
&apos; &apos;+Billing_Contact_Name__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BILLING_CONTACT_PERSON</label>
    <type>Text</type>
</CustomField>