force-app/main/default/objects/Eval_Request__c/fields/Billing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone__c</fullName>
    <label>Billing Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>