force-app/main/default/objects/Eval_Request__c/fields/BILLING_CONTACT_PHONE_Sync__c.field-meta.xml
<CustomField>
    <fullName>BILLING_CONTACT_PHONE_Sync__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;, 
Owner:User.Phone,   Billing_Contact_Name__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BILLING_CONTACT_PHONE_Sync</label>
    <type>Text</type>
</CustomField>