force-app/main/default/objects/Eval_Request__c/fields/BILLING_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>BILLING_COUNTRY__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;, 
Owner:User.Country,   
if(not(isblank(Billing_Contact_Name__r.Account.BillingCountry)), Billing_Contact_Name__r.Account.BillingCountry, Oracle_Ship_Country__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BILLING_COUNTRY</label>
    <type>Text</type>
</CustomField>