force-app/main/default/objects/Eval_Request__c/fields/Billing_Country_Quote__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Quote__c</fullName>
    <label>Billing Country (Quote)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>