force-app/main/default/objects/Eval_Request__c/fields/BILLING_POSTALCODE__c.field-meta.xml
<CustomField>
    <fullName>BILLING_POSTALCODE__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;, 
Owner:User.PostalCode,   
if(not(isblank(Billing_Contact_Name__r.Account.BillingPostalCode)), Billing_Contact_Name__r.Account.BillingPostalCode, Oracle_Ship_Zip__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BILLING_POSTALCODE</label>
    <type>Text</type>
</CustomField>