force-app/main/default/objects/Eval_Request__c/fields/BILLING_STATE__c.field-meta.xml
<CustomField>
    <fullName>BILLING_STATE__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;, 
text(Owner:User.StateCode),   
if(not(isblank(text(Billing_Contact_Name__r.Account.BillingStateCode))), text(Billing_Contact_Name__r.Account.BillingStateCode), Oracle_Ship_State__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BILLING_STATE</label>
    <type>Text</type>
</CustomField>