force-app/main/default/objects/Eval_Request__c/fields/Billing_State_Province_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province_Invoice__c</fullName>
    <label>Billing State/Province (Invoice)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>