force-app/main/default/objects/Eval_Request__c/fields/Billing_State_Quote__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Quote__c</fullName>
    <inlineHelpText>2 digit state code</inlineHelpText>
    <label>Billing State (Quote)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>