force-app/main/default/objects/Eval_Request__c/fields/BILLING_STREET__c.field-meta.xml
<CustomField>
    <fullName>BILLING_STREET__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;, 
Owner:User.Street,   
if(not(isblank(Billing_Contact_Name__r.Account.BillingStreet)), Billing_Contact_Name__r.Account.BillingStreet, Oracle_Ship_Street__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BILLING_STREET</label>
    <type>Text</type>
</CustomField>