force-app/main/default/objects/Eval_Request__c/fields/Billing_Street_Quote__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Quote__c</fullName>
    <label>Billing Street (Quote)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>