force-app/main/default/objects/Eval_Request__c/fields/Billing_Zip_Quote__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Quote__c</fullName>
    <label>Billing Zip (Quote)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>