force-app/main/default/objects/Eval_Request__c/fields/Billling_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billling_Contact_Name__c</fullName>
    <label>Billling Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>