force-app/main/default/objects/Eval_Request__c/fields/Business_Case_Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Write_Off__c</fullName>
    <inlineHelpText>You can write in paragraphs and use formatting.</inlineHelpText>
    <label>Business Case Write Off</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>