force-app/main/default/objects/Eval_Request__c/fields/Conga_Agreement_Manual__c.field-meta.xml
<CustomField>
    <fullName>Conga_Agreement_Manual__c</fullName>
    <formula>HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot; + $Api.Session_ID +
&quot;&amp;ServerURL=&quot; +  $Api.Partner_Server_URL_290 +
 Eval_Agreement_No_CC__c ,
&quot;Test Conga Workflow via UI&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Agreement Manual</label>
    <type>Text</type>
</CustomField>