force-app/main/default/objects/Eval_Request__c/fields/Conga_Workflow_Test__c.field-meta.xml
<CustomField>
    <fullName>Conga_Workflow_Test__c</fullName>
    <description>Eval Quote Formula for Quote to be sent out</description>
    <formula>HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot; + $Api.Session_ID +
&quot;&amp;ServerURL=&quot; +  $Api.Partner_Server_URL_290 +
 Eval_Agreement_No_CC__c ,
&quot;Test Conga Workflow via UI&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Workflow Hyperlink Test</label>
    <type>Text</type>
</CustomField>