force-app/main/default/objects/Eval_Request__c/fields/Count_of_Units_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Units_Past_Due__c</fullName>
    <formula>of_Requested_Eval_Units__c - of_Eval_Units_Returned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Units Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>