force-app/main/default/objects/Eval_Request__c/fields/Created_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Created_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that allows for automated apporal when creating on mobile devices</description>
    <label>Created Mobile</label>
    <type>Checkbox</type>
</CustomField>