force-app/main/default/objects/Eval_Request__c/fields/Days_customer_had_eval__c.field-meta.xml
<CustomField>
    <fullName>Days_customer_had_eval__c</fullName>
    <formula>today() - Expected_Receive_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days customer had eval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>