force-app/main/default/objects/Eval_Request__c/fields/Days_Not_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Days_Not_Shipped__c</fullName>
    <formula>if(not(isblank(Ship_Date__c)),0, today()- Approval_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Not Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>