force-app/main/default/objects/Eval_Request__c/fields/Days_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Days_Outstanding__c</fullName>
    <description>Days that the unit is past its return date. If negative, the unit is not due. Approved extensions will make this  minus 30 days</description>
    <formula>if( text( Product_Status__c  ) =&apos;Closed&apos; ||  text( Product_Status__c  ) =&apos;Written Off&apos; || text( Product_Status__c  ) =&apos;Returned/Purchased&apos; , 0, today() -  New_Return_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>