force-app/main/default/objects/Eval_Request__c/fields/Days_Unit_Oustanding__c.field-meta.xml
<CustomField>
    <fullName>Days_Unit_Oustanding__c</fullName>
    <description>How many days the unit has been out of Chino and not returned. This is not same as past due as this does not show and extensions.</description>
    <formula>today()- datevalue(Latest_Ship_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many days the unit has been out of Chino and not returned. This is not same as past due as this does not show and extensions.</inlineHelpText>
    <label>Days Unit Oustanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>