force-app/main/default/objects/Eval_Request__c/fields/Demo_Kit__c.field-meta.xml
<CustomField>
    <fullName>Demo_Kit__c</fullName>
    <label>Demo Kit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>