force-app/main/default/objects/Eval_Request__c/fields/Dummyfield__c.field-meta.xml
<CustomField>
    <fullName>Dummyfield__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for list update in mass</description>
    <label>Dummyfield</label>
    <type>Checkbox</type>
</CustomField>