force-app/main/default/objects/Eval_Request__c/fields/Eval_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Eval_Agreement__c</fullName>
    <description>##Conga created btn:00b12000000YPdL</description>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;emailtemplateid=00X12000001mrOb&quot; + 
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;EmailReplyToID=&quot;+OwnerId +
&quot;&amp;templateid=&quot; + Template_ID__c + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;emailtoid=&quot; + Billing_Contact_Name__c +
&quot;&amp;emailadditionalto=&quot; + Eval_Submitter_Email__c</formula>
    <label>Eval Agreement</label>
    <type>Text</type>
</CustomField>