force-app/main/default/objects/Eval_Request__c/fields/Eval_Agreement_No_CC__c.field-meta.xml
<CustomField>
    <fullName>Eval_Agreement_No_CC__c</fullName>
    <description>##Conga created btn:00b12000000YPdL
##Conga updated btn:00b12000000YPdL</description>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=&quot; +Template_ID__c +
&quot;&amp;emailtemplateid=00X12000001mrOb&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;emailtoid=&quot; + Billing_Contact_Name__c  +
&quot;&amp;EmailReplyToID=&quot;+OwnerId +
&quot;&amp;emailadditionalto=&quot; + Eval_Submitter_Email__c +
&quot;&amp;AC0=1&quot; +
&quot;&amp;AC1=&quot; + &quot;Agreement Generated And Sent&quot; +
&quot;&amp;SC0=1&quot; +
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;LGParentId=&quot; + Id</formula>
    <label>Eval Agreement No CC</label>
    <type>Text</type>
</CustomField>