force-app/main/default/objects/Eval_Request__c/fields/Eval_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Eval_Approval_Process__c</fullName>
    <description>Lets admin know which approval process the eval is under. This is for diagnose issues with the approval process.</description>
    <label>Eval Approval Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VP Special Approval Agreeement</fullName>
            </value>
            <value>
                <fullName>VP Special Approval Waive Agreeement</fullName>
            </value>
            <value>
                <fullName>VP Write Off</fullName>
            </value>
            <value>
                <fullName>VP Special Approval Agreeement Canada</fullName>
            </value>
            <value>
                <fullName>Default Process</fullName>
            </value>
            <value>
                <fullName>Goved Waiver</fullName>
            </value>
            <value>
                <fullName>Post Write Off Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>