force-app/main/default/objects/Eval_Request__c/fields/Eval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Eval_Notes__c</fullName>
    <label>Eval Notes</label>
    <type>TextArea</type>
</CustomField>