force-app/main/default/objects/Eval_Request__c/fields/Eval_Owner__c.field-meta.xml
<CustomField>
    <fullName>Eval_Owner__c</fullName>
    <formula>Evaluation_Owner__r.FirstName &amp; &apos; &apos;&amp; Evaluation_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eval Owner ()</label>
    <type>Text</type>
</CustomField>