force-app/main/default/objects/Eval_Request__c/fields/Eval_Process_Stage__c.field-meta.xml
<CustomField>
    <fullName>Eval_Process_Stage__c</fullName>
    <defaultValue>&quot;Awaiting Submission Request&quot;</defaultValue>
    <description>Gives stage to all parties to determine where in the process the request is held  up.</description>
    <label>Eval Process Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Submission Request</fullName>
                <default>true</default>
                <label>Awaiting Submission Request</label>
            </value>
            <value>
                <fullName>Awaiting Approval from Director or VP</fullName>
            </value>
            <value>
                <fullName>Awaiting Upload of Agreement</fullName>
            </value>
            <value>
                <fullName>Awaiting Shipping</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancellation Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>