force-app/main/default/objects/Eval_Request__c/fields/Eval_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Eval_Status_Comments__c</fullName>
    <description>Sales reps can give comments on the status of the evaluation. This is history tracked.</description>
    <inlineHelpText>Sales reps can give comments on the status of the evaluation. This is history tracked.</inlineHelpText>
    <label>Eval Status Comments</label>
    <type>TextArea</type>
</CustomField>