force-app/main/default/objects/Eval_Request__c/fields/Eval_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Eval_Submitter_Email__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eval Owner Email</label>
    <type>Text</type>
</CustomField>