force-app/main/default/objects/Eval_Request__c/fields/Eval_Transfer_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Eval_Transfer_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eval Transfer Rejected</label>
    <type>Checkbox</type>
</CustomField>