force-app/main/default/objects/Eval_Request__c/fields/Eval_Transfered_From__c.field-meta.xml
<CustomField>
    <fullName>Eval_Transfered_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eval Transfered From</label>
    <referenceTo>Eval_Request__c</referenceTo>
    <relationshipLabel>Eval Requests</relationshipLabel>
    <relationshipName>Eval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>