force-app/main/default/objects/Eval_Request__c/fields/Eval_Type_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Eval_Type_Change_Request__c</fullName>
    <label>Eval Type Change Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End-User/Reseller/Disty Eval</fullName>
            </value>
            <value>
                <fullName>ViewSonic Sales Rep Eval</fullName>
            </value>
            <value>
                <fullName>Write Off Request</fullName>
            </value>
            <value>
                <fullName>Reseller Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>