force-app/main/default/objects/Eval_Request__c/fields/Eval_Units_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Eval_Units_Shipped__c</fullName>
    <label>Eval Units Shipped</label>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>