force-app/main/default/objects/Eval_Request__c/fields/EvalProcessPath__c.field-meta.xml
<CustomField>
    <fullName>EvalProcessPath__c</fullName>
    <description>Eval Process stage for path settings on lightning to show what stage the eval is in as opposed to the stage that we want to move it to.</description>
    <label>EvalProcessPath</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entered</fullName>
                <default>true</default>
                <label>Entered</label>
            </value>
            <value>
                <fullName>Awaiting Submission Request</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval from Director or VP</fullName>
            </value>
            <value>
                <fullName>Awaiting Upload of Agreement</fullName>
            </value>
            <value>
                <fullName>Awaiting Shipping</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancellation Requested</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>