force-app/main/default/objects/Eval_Request__c/fields/EvalRejected__c.field-meta.xml
<CustomField>
    <fullName>EvalRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EvalRejected</label>
    <type>Checkbox</type>
</CustomField>