force-app/main/default/objects/Eval_Request__c/fields/EvalReturn_Notes__c.field-meta.xml
<CustomField>
    <fullName>EvalReturn_Notes__c</fullName>
    <description>Notes that go to the eval team when returning the unit</description>
    <label>EvalReturn Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>