force-app/main/default/objects/Eval_Request__c/fields/Evals_Outstanding_Contact__c.field-meta.xml
<CustomField>
    <fullName>Evals_Outstanding_Contact__c</fullName>
    <label>Evals Outstanding Contact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>