force-app/main/default/objects/Eval_Request__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;Id,  Opportunity_Name__r.Name,&quot;_parent&quot;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation</label>
    <type>Text</type>
</CustomField>