force-app/main/default/objects/Eval_Request__c/fields/Evaluation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Eval Requests (Evaluation Owner)</relationshipLabel>
    <relationshipName>Product_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>