force-app/main/default/objects/Eval_Request__c/fields/Evaluation_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Owner_Email__c</fullName>
    <formula>Evaluation_Owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation Owner Email</label>
    <type>Text</type>
</CustomField>