force-app/main/default/objects/Eval_Request__c/fields/Evaluations_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Evaluations_Outstanding__c</fullName>
    <inlineHelpText>Dollar Amount of products that are not returned, whether or not they are past due. This is to keep an eye on total products going out for evaluation by sales rep and by account.</inlineHelpText>
    <label>Evals Outstanding</label>
    <summarizedField>Eval_Unit_Details__c.Evaluation_Price_Text__c</summarizedField>
    <summaryFilterItems>
        <field>Eval_Unit_Details__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Product Returned, Purchased/Invoiced, Write-off</value>
    </summaryFilterItems>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>