force-app/main/default/objects/Eval_Request__c/fields/Expected_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Receive_Date__c</fullName>
    <description>Date when the  customer would like to receive the item(s) by</description>
    <inlineHelpText>Date when the  customer would like to receive the item(s) by</inlineHelpText>
    <label>Expected Receive Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>